--- a/web/templates/js_dependencies.html
+++ b/web/templates/js_dependencies.html
@@ -1,4 +1,6 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.runtime.min.js"></script>
+<script src="//js.pusher.com/2.2/pusher.min.js" type="text/javascript"></script>
+
 <script src="/static/web/js/handlebars_helpers.js" type="text/javascript"></script>
 
 <script type="text/javascript" src="/static/web/js/templates.js"></script>
@@ -23,6 +25,7 @@
 <script src="/static/web/js/vendor/angular/angular-nanobar.js"></script>
 <script src="/static/web/js/vendor/angular/angular-sortable.js"></script>
 <script src="/static/web/js/vendor/angular/angular-selectize.js"></script>
+<script src="/static/web/js/vendor/angular/angular-pusher.min.js"></script>
 
 <script src="/static/web/js/wittl/filters.js"></script>
 <script src="/static/web/js/wittl/directives.js"></script>
