--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -138,7 +138,7 @@
 
         <!-- JavaScript here
         ================================================== -->
-        <script src="/static/web/js/vendor/underscore.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/static/web/js/vendor/jquery.min.js"><\/script>')</script>
         <script src="/static/web/js/vendor/bootstrap.js"></script>
