Added togglable favourites

--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -21,7 +21,7 @@
                             <input name="url" ng-model="item.url" class="form-control" type="text"
                                    placeholder="Add an item to your wittlist..."/>
                             <span class="input-group-btn">
-                                <button type="submit" class="ladda-button wittl-btn btn" type="submit"
+                                <button type="submit" class="ladda-button wittl-btn btn"
                                         data-style="zoom-in"><span class="ladda-label">Add</span></button>
                             </span>
                         </div>
