--- a/web/templates/list/favourites.html
+++ b/web/templates/list/favourites.html
@@ -26,7 +26,7 @@
 	                       ng-if="!item.favourited" href="#"><i
 	                            class="icon_star_alt"></i></a>
 
-	                    <img ng-src="[[ item.card_image ]]" title="Name of thing here"/>
+	                    <img ng-src="[[ item.card_image ]]"/>
 	                </div>
 	                <div class="details">
 	                    <h3 class="title"> [[ item.name | limitTo: 20 ]]</h3>
