--- a/web/templates/registration/login.html
+++ b/web/templates/registration/login.html
@@ -13,7 +13,7 @@
                 <small class="login-error">Your username and password didn't match. Please try again.</small>
             {% endif %}
 
-            <form role="form" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+            <form role="form" method="post" action="{% url 'login' %}">
                 {% csrf_token %}
                 <div class="wittl-input-group">
                     <input type="text" name="{{ form.username.name }}" class="username form-control" placeholder="Username" />
