Added comments with realtime

--- a/web/templates/js_dependencies.html
+++ b/web/templates/js_dependencies.html
@@ -35,6 +35,7 @@
 <script src="/static/web/js/wittl/controllers/listItemController.js"></script>
 <script src="/static/web/js/wittl/controllers/favouritesController.js"></script>
 <script src="/static/web/js/wittl/controllers/userInviteController.js"></script>
+<script src="/static/web/js/wittl/controllers/listCommentController.js"></script>
 
 <script src="/static/web/js/wittl/services.js"></script>
 <script src="/static/web/js/wittl/app.js"></script>
