--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -85,7 +85,7 @@
        		<section class="hero">
                 <div class="wrap">
                     <img src="/static/web/images/logo.png" />
-                    <h2>Reach <em>better</em> decisions <strong><em>faster</em></strong></h2>
+                    <h2>Reach <em>better</em> decisions <em>faster</em></h2>
                 </div>
        		</section>
 
@@ -94,14 +94,13 @@
 
                     <div class="strip row">
                         <header class="main-header col-xs-6 col-xs-offset-3">
-                            <h1>What's wittlin'?</h1>
                             
                             <div class="signup-wrap">
                                 <a href="{% url 'register' %}" id="signup">Sign Up</a>                        
                             </div>
                             
                             <div class="tagline col-sm-6 col-sm-offset-3">
-                                <h4>You haven't heard of it yet?!<br />That's okay. Now you have.</h4>
+                                <h4>You haven't heard of it yet?!<br />That's okay. Sign up and find out!</h4>
                             </div>
                         </header>
                     </div>
