--- a/web/templates/js_dependencies.html
+++ b/web/templates/js_dependencies.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="/static/web/js/vendor/selectize/js/standalone/selectize.min.js"></script>
 
 <script src="/static/web/js/vendor/angular/angular.js"></script>
+<script src="/static/web/js/vendor/angular/angular-animate.js"></script>
 <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
 <script src="/static/web/js/vendor/angular/angular-cookies.js"></script>
 <script src="/static/web/js/vendor/angular/angular-isotope.min.js"></script>
