--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,5 +1,6 @@
 // Import variables
 @import "variables";
+
 // Import vendor
 @import "vendor/bootstrap";
 @import "vendor/sidr";
@@ -23,7 +24,7 @@ html, body {
   height: 100%;
   width: 100%;
 }
-
+ 
 body {
   position: relative;
   float: left;
@@ -93,6 +94,13 @@ a {
       margin: 0;
       color: white;
       font-size: 24px;
+    }
+
+    img {
+      display: inline-block;
+      width: 100%;
+      margin-top: -10px;
+      margin-right: 10px;
     }
   }
 }
@@ -185,6 +193,30 @@ a {
   background-color: #FFF;
   border-bottom: 1px solid #EEE;
   //box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+}
+
+.global-nav {
+  float: left;
+  height: 100%;
+
+  li {
+    padding: 10px 20px;
+    font-family: $heading-font;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 0.9em;
+
+    a {
+      color: lighten($subheading-color, 10%);
+      @include transition(color 0.1s ease-out);
+
+      &:hover {
+        color: lighten($subheading-color, 25%);
+        @include transition(color 0.1s ease-in);
+      }  
+    }
+  }
 }
 
 .content {
@@ -1104,6 +1136,16 @@ body.modal-open {
     color: lighten($subheading-color, 15%);
     font-weight: 700;
 
+    .avatar {
+      width: 30px;
+      height: 30px;
+      margin-right: 15px;
+
+      img {
+        width: 30px;
+      }
+    }
+
     .profile-link, .logout {
       color: lighten($subheading-color, 15%);
       padding: 0 5px;
@@ -1663,7 +1705,7 @@ div.members-area {
   }
 
   .active-members {
-    padding-top: 40px;
+    padding-top: 20px;
 
     li {
       padding: 10px;
@@ -1734,7 +1776,7 @@ div.members-area {
         border-radius: 99em;
         background-color: rgba(0,0,0,0.4);
         font-size: 7px;
-        color: #FFF;
+        color: #FFF; 
       }
     }
      
@@ -1754,7 +1796,7 @@ div.members-area {
     padding: 0;
     margin-bottom: 0;
     
-
+ 
 
     .message {
       padding: 10px 0;
