--- a/sass/components/_home.scss
+++ b/sass/components/_home.scss
@@ -84,6 +84,7 @@
 			h2 {
 				text-align: center;
 				margin: 0;
+				margin-top: 20px;
 				//background-color: rgba(255,255,255,0.15);
 				padding: 15px 20px;
 				border-radius: 8px;
@@ -154,6 +155,7 @@
 		}
 
 		.signup-wrap {
+			margin: 30px 0 10px 0;
 
 			#signup {
 				padding: 15px 60px;
@@ -163,8 +165,12 @@
 				color: #FFF;
 				font-size: 1.6em;
 				text-transform: uppercase;
-				font-weight: 300;
+				font-weight: 100;
 				letter-spacing: 3px;
+
+				&:hover {
+					background-color: rgba(0,0,0,0.15);
+				}
 
 			}
 		}
