added wittl deletion

--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -202,7 +202,7 @@
                              dropdown-onchange="addNewWittl(selected)"></div>
                         <wittl-params wittl="clause"></wittl-params>
                         <div class="del">
-                            <a href="#" ng-click="del(clause)">
+                            <a href="#" ng-click="del($index, clause)">
                                 <i class="icon_close"></i>
                             </a>
                         </div>
